<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:id="@+id/team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team1"
                    android:textAppearance="@style/teamView"/>

                <TextView
                    android:id="@+id/scoreTeam1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/score"
                    android:textAppearance="@style/scoreView"/>

                <Button
                    android:onClick="scoreButton"
                    android:tag="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threePoints"
                    android:textAppearance="@style/buttonText"/>

                <Button
                    android:onClick="scoreButton"
                    android:tag="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twoPoints"
                    android:textAppearance="@style/buttonText"/>

                <Button
                    android:onClick="scoreButton"
                    android:tag="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/freeThrow"
                    android:textAppearance="@style/buttonText"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:id="@+id/team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team2"
                    android:textAppearance="@style/teamView"/>

                <TextView
                    android:id="@+id/scoreTeam2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/score"
                    android:textAppearance="@style/scoreView"/>

                <Button
                    android:onClick="scoreButton"
                    android:tag="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/threePoints"
                    android:textAppearance="@style/buttonText"/>

                <Button
                    android:onClick="scoreButton"
                    android:tag="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twoPoints"
                    android:textAppearance="@style/buttonText"/>

                <Button
                    android:onClick="scoreButton"
                    android:tag="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/freeThrow"
                    android:textAppearance="@style/buttonText"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomPanel"
            android:layout_below="@id/topPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="32dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetScore"
                android:text="@string/reset"
                android:textAppearance="@style/resetButton" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
